# control-mcp

./: .gitignore  README.md  claude.md  pyproject.toml  settings.txt
src/control_mcp/: __init__.py  accessibility.py  bezier_utils.py  config.py  log_window.py  mouse_control.py  server.py  tools.py
src/control_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
testing/test_scripts/: test_border_margin.py  test_corners.py  test_grid_screenshot.py  test_mouse_movement.py  test_movement_accuracy.py  test_speed_and_bezier.py
