[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "control-mcp"
version = "0.1.0"
description = "MCP server for low-level mouse control on macOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",  # Required by pyautogui
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
control-mcp = "control_mcp.server:main"
