[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "control-mcp"
version = "0.1.0"
description = "MCP server for low-level mouse control on macOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyautogui>=0.9.41",
    "pillow>=10.0.0",  # Required by pyautogui
    "atomacos>=3.3.0",  # macOS Accessibility API wrapper
    "pyobjc-framework-ApplicationServices>=10.0",  # macOS Accessibility API
    "pyobjc-framework-Quartz>=10.0",  # macOS Quartz for screen info
    "pyobjc-framework-Cocoa>=10.0",  # macOS Cocoa framework
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
control-mcp = "control_mcp.server:main"
